[package]
name = "node"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

db = { path = "../db" }
iced = { version = "0.4", features = ["async-std", "debug", "default_system_font", "pure"] }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = { version = "1.0.82" }
once_cell = { version = "1.13.0" }
uuid = { version = "1.1.2", features = ["v4"] }
anyhow = { version = "1.0.58" }
aes-gcm = "0.9.4"
rand = "0.8.5"
env_logger = "0.9.0"
log = "0.4.17"

