[package]
name = "node"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.18.0"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = { version = "1.0.82" }
once_cell = { version = "1.13.0" }
uuid = { version = "1.1.2", features = ["v4"] }
anyhow = { version = "1.0.58" }
aes-gcm = "0.9.4"
rand = "0.8.5"
env_logger = "0.9.0"
log = "0.4.17"
sha2 = "0.10.2"
hex = "0.4.3"
self_encryption = "0.27.4"
rocksdb = "0.18.0"
copypasta = "0.8.1"
chrono = "0.4"